--- a/client/src/components/main-view/main-view.scss
+++ b/client/src/components/main-view/main-view.scss
@@ -8,4 +8,10 @@
   justify-content: space-evenly;
   grid-gap: 1rem;
   margin-top: 3rem;
+
+  .profilLink {
+    grid-column: 1 / span 3;
+    display: flex;
+    justify-content: flex-end;
+  }
 }
