--- a/client/src/components/movie-view/movie-view.scss
+++ b/client/src/components/movie-view/movie-view.scss
@@ -57,7 +57,12 @@ $primary-padding: 0.3rem;
 
   .backBtn {
     margin-left: 2rem;
+    align-items: center;
+    // border: 1px solid red;
     grid-column: 2;
     grid-row: 5;
+    display: flex;
+    // height: 40px;
+    justify-content: space-between;
   }
 }
